# unicorn-binance-suite

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  TASKS.md  environment.yml  llms.txt  meta.yaml  pyproject.toml  requirements.txt  setup.py  unittest_binance_suite.py
.github/: pull_request_template.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: build_conda.yml  build_wheels.yml  unit-tests.yml
dev/: set_version_config.txt
dev/pypi/: create_wheel.sh  install_packaging_tools.sh  remove_files.sh  upload_wheel.sh
dev/sphinx/: create_docs.sh  install_sphinx.sh
dev/sphinx/source/: conf.py  contributing.md  docs_index.md  index.rst  readme.md
docs/: .buildinfo  changelog.html  code_of_conduct.html  contributing.html  docs_index.html  genindex.html  index.html  license.html  modules.html  objects.inv  readme.html  search.html  searchindex.js  security.html
docs/_sources/: changelog.md.txt  license.rst.txt  readme.md.txt  security.md.txt
tools/: get_versions_of_unicorn_packages.py
unicorn_binance_suite/: manager.py
