[tool.poetry]
name = "unicorn-binance-suite"
version = "2.0.0"
description = "The UNICORN Binance Suite is a comprehensive collection of open-source Python packages designed for building sophisticated automated trading systems. Tailored for Python developers, this suite offers seamless integration with the Binance API, enabling the creation of advanced and professional trading bots for streamlined and efficient cryptocurrency trading."
authors = ["LUCIT Systems and Development <info@lucit.tech>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/oliver-zehentleitner/unicorn-binance-suite"
documentation = "https://oliver-zehentleitner.github.io/unicorn-binance-suite"
repository = "https://github.com/oliver-zehentleitner/unicorn-binance-suite"

[tool.poetry.urls]
'Howto' = 'https://github.com/oliver-zehentleitner/unicorn-binance-suite#howto'
'Documentation' = 'https://oliver-zehentleitner.github.io/unicorn-binance-suite'
'Wiki' = 'https://github.com/oliver-zehentleitner/unicorn-binance-suite/wiki'
'Author' = 'https://www.linkedin.com/in/oliver-zehentleitner'
'Changes' = 'https://oliver-zehentleitner.github.io/unicorn-binance-suite/changelog.html'
'License' = 'https://oliver-zehentleitner.github.io/unicorn-binance-suite/license.html'
'Issue Tracker' = 'https://github.com/oliver-zehentleitner/unicorn-binance-suite/issues'
'Telegram' = 'https://t.me/unicorndevs'

[tool.poetry.dependencies]
python = ">=3.8.0"
unicorn-fy = ">=0.16.1"
unicorn-binance-local-depth-cache = ">=1.0.0"
unicorn-binance-rest-api = ">=2.8.0"
unicorn-binance-websocket-api = ">=2.10.2"
unicorn-binance-trailing-stop-loss = ">=1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "wheel", "Cython", "pip"]
build-backend = "setuptools.build_meta"

[tool.poetry.package_data]
unicorn_binance_suite = ["*.so", "*.dll"]
